--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('https://th.bing.com/th/id/R.968ef696022ee7f7fe91505c785ccd65?rik=hYF1g7guBr4FYA&riu=http%3a%2f%2fcdn.wallpapersafari.com%2f87%2f15%2fpmqPeh.jpg&ehk=uo75zbohQEu%2bj24YS5E5lEyQ9Bz8stCepGdFaGN%2bHG8%3d&risl=&pid=ImgRaw&r=0'); /* Replace 'beach.jpg' with your image file */
+            background-image: url('https://j.gifs.com/YE6OJA.gif'); /* Replace 'beach.jpg' with your image file */
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
