--- a/index.html
+++ b/index.html
@@ -3,63 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-image: url('https://j.gifs.com/YE6OJA.gif'); /* Replace 'beach.jpg' with your image file */
-            background-size: cover;
-            background-position: center;
-            font-family: Arial, sans-serif;
-            color: white;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-
-        #countdown {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        #name {
-            font-size: 1.5em;
-        }
-    </style>
+    <title>Under Construction</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Coming Soon</h1>
-    <div id="countdown"></div>
-    <div id="name">Mike King</div>
-
-    <script>
-        // Set the date two months from now
-        var targetDate = new Date();
-        targetDate.setMonth(targetDate.getMonth() + 2);
-
-        function updateCountdown() {
-            var now = new Date();
-            var difference = targetDate - now;
-
-            var days = Math.floor(difference / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((difference % (1000 * 60)) / 1000);
-
-            document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-        }
-
-        // Update countdown every second
-        setInterval(updateCountdown, 1000);
-    </script>
+    <div class="container">
+        <div class="logo">MK</div>
+        <h1>Website Under Construction</h1>
+        <p>Our website is currently under construction. We'll be here soon with our new awesome site. Stay tuned!</p>
+    </div>
 </body>
 </html>
