--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction</title>
+    <title>MKING - Under Construction</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="logo">MK</div>
-        <h1>Website Under Construction</h1>
-        <p>Our website is currently under construction. We'll be here soon with our new awesome site. Stay tuned!</p>
+        <div class="content">
+            <h1>MKING</h1>
+            <h2>AI, Cybersecurity, and Technology</h2>
+            <p>Website Under Construction</p>
+        </div>
     </div>
 </body>
 </html>
